# fescher

./: .gitignore  README.md  lr.py  pyproject.toml  rrm_credit_lr.py
.github/workflows/: ci.yml
run/: rrm_credit_lr.py
src/: conftest.py  plotting.py  repeated_risk_min.py  rrm_credit_lr.py  types.py
src/credit/: agent.py  environment.py  loader.py  reward.py  simulator.py
src/dynamics/: env.py  intervention.py  registration.py  response.py  reward.py  simulator.py  state.py
src/env/: build.py  envs.py  response.py  reward.py  simulator.py  state.py
src/loader/: __init__.py  credit.py
src/models/: lr.py
src/tests/: test_env.py  test_registration.py  test_response.py  test_rrm.py  test_simulator.py  test_state.py
